--- a/telacss.css
+++ b/telacss.css
@@ -2,16 +2,16 @@
 
 background-image: linear-gradient (#587500, #2b3bd5, #171885);
 Text-align:center; 
-color:yellow;;
+color:yellow;
 border-radius:10px;
-padding 1 0 1 0;
+padding: 1px 0 1px 0;
 }
-//.body{
-// text-align:center;
- // border-style:solid;
-// border: 3 3 3 3;
-// border-radius:10px;
-// margin-top: 5px;
+.body{
+ text-align:center;
+ border-style:solid;
+ border: 3 3 3 3;
+ border-radius:10px;
+ margin-top: 5px;
 }
 .container{
 //text-align:center;
@@ -26,11 +26,12 @@ background-color: #d3d3d3;
 }
 div.container3 {
 height: 10em;
-position: relative} /* 1 */
+position: relative;
+} /* 1 */
 div.container3 p {
 margin: 0;
 position: absolute; /* 2 */
 top: 50%; /*3*/
-transform: translate (0, -50%) /*4*/
+transform: translate (0, -50%); /*4*/
 }
 
