--- a/telacss.css
+++ b/telacss.css
@@ -1,4 +1,4 @@
-.header{
+header{
 
 background-image: linear-gradient (#587500, #2b3bd5, #171885);
 Text-align:center; 
@@ -6,17 +6,17 @@ color:yellow;
 border-radius:10px;
 padding: 1px 0 1px 0;
 }
-.body{
+body{
  text-align:center;
  border-style:solid;
- border: 3 3 3 3;
+ border: 3px 3px 3px 3px;
  border-radius:10px;
  margin-top: 5px;
 }
 .container{
 //text-align:center;
 border-style:solid;
-border: 3 3 3 3; 
+border: 3px 3px 3px 3px;
 border-radius:10px;
 margin-top:5px; 
 margin-left: 15%;
