--- a/telacss.css
+++ b/telacss.css
@@ -1,37 +1,42 @@
-header{
 
-background-image: linear-gradient (#587500, #2b3bd5, #171885);
-Text-align:center; 
-color:yellow;
-border-radius:10px;
-padding: 1px 0 1px 0;
+header{ 
+    background-image: linear-gradient(#587500, #2b3bd5, #171885);
+    Text-align:center; 
+    color:yellow;
+    border-radius:10px;
+    padding: 1px 0 1px 0;
 }
-body{
- text-align:center;
- border-style:solid;
- border: 3px 3px 3px 3px;
- border-radius:10px;
- margin-top: 5px;
+body{ 
+    text-align:center; 
+    border-style:solid; 
+    border: 3px 3px 3px 3px; 
+    border-radius:10px; 
+    padding: 20px;
+}
+form{
+    
 }
 .container{
-//text-align:center;
-border-style:solid;
-border: 3px 3px 3px 3px;
-border-radius:10px;
-margin-top:5px; 
-margin-left: 15%;
-margin-right:158;
-margin-bottom:5px;
-background-color: #d3d3d3;
+    text-align:center;
+    border-style:solid;
+    border: 3px 3px 3px 3px; 
+    border-radius:10px;
+    margin-top:5px; 
+    margin-left: 15%;
+    margin-bottom:5px;
+    background-color: #d3d3d3;
 }
 div.container3 {
-height: 10em;
-position: relative;
-} /* 1 */
+    height: 10em;
+    position: relative;
+} 
+/* 1 */
 div.container3 p {
-margin: 0;
-position: absolute; /* 2 */
-top: 50%; /*3*/
-transform: translate (0, -50%); /*4*/
+    margin: 0;
+    position: absolute; 
+    /* 2 */
+    top: 50%; 
+    /*3*/
+    transform: translate (0, -50%); 
+    /*4*/
 }
-
