--- a/telacss.css
+++ b/telacss.css
@@ -9,6 +9,7 @@ body{
     text-align:center; 
     border-style:solid; 
     border: 3px 3px 3px 3px; 
+    color:yellow;
     border-radius:10px; 
     padding: 20px;
 }
